hphp/test/quick/hh_type_args3.php.expectf

Fatal error: Argument 1 passed to Foo::test5() must be an instance of d, string given in %s on line 15
